--- a/MacSVG Plugin Projects/macSVG Plugins/TransformAttributeEditorPlugin/TransformAttributeEditorPlugin/TransformAttributeEditor.xib
+++ b/MacSVG Plugin Projects/macSVG Plugins/TransformAttributeEditorPlugin/TransformAttributeEditorPlugin/TransformAttributeEditor.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="10116" systemVersion="15G31" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
-        <development version="6300" identifier="xcode"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="10116"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11201"/>
+        <capability name="box content view" minToolsVersion="7.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="TransformAttributeEditor">
@@ -24,95 +24,29 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customView id="1" customClass="FlippedView">
-            <rect key="frame" x="0.0" y="0.0" width="226" height="232"/>
+        <customView misplaced="YES" id="1" customClass="FlippedView">
+            <rect key="frame" x="0.0" y="0.0" width="226" height="216"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
             <subviews>
-                <customView id="PVF-N4-rRi">
-                    <rect key="frame" x="0.0" y="0.0" width="226" height="232"/>
+                <customView misplaced="YES" id="PVF-N4-rRi">
+                    <rect key="frame" x="0.0" y="0.0" width="226" height="216"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                     <subviews>
-                        <button toolTip="Scale Tool" tag="14" id="4" customClass="MacSVGIconButton">
-                            <rect key="frame" x="31" y="200" width="32" height="32"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                            <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="scale" imagePosition="only" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="9">
-                                <behavior key="behavior" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
-                                <font key="font" metaFont="system"/>
-                            </buttonCell>
-                            <connections>
-                                <action selector="transformToolButtonAction:" target="-2" id="pod-mv-VUi"/>
-                            </connections>
-                        </button>
-                        <button toolTip="Rotate Tool" tag="15" id="5" customClass="MacSVGIconButton">
-                            <rect key="frame" x="62" y="200" width="32" height="32"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                            <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="rotate" imagePosition="only" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="8">
-                                <behavior key="behavior" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
-                                <font key="font" metaFont="system"/>
-                            </buttonCell>
-                            <connections>
-                                <action selector="transformToolButtonAction:" target="-2" id="5XP-DA-nbX"/>
-                            </connections>
-                        </button>
-                        <button toolTip="SkewX Tool" tag="16" id="6" customClass="MacSVGIconButton">
-                            <rect key="frame" x="93" y="200" width="32" height="32"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                            <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="skewX" imagePosition="only" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="7">
-                                <behavior key="behavior" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
-                                <font key="font" metaFont="system"/>
-                            </buttonCell>
-                            <connections>
-                                <action selector="transformToolButtonAction:" target="-2" id="9Mv-HB-IhN"/>
-                            </connections>
-                        </button>
-                        <button toolTip="SkewY Tool" tag="17" id="76" customClass="MacSVGIconButton">
-                            <rect key="frame" x="124" y="200" width="32" height="32"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                            <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="skewY" imagePosition="only" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="77">
-                                <behavior key="behavior" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
-                                <font key="font" metaFont="system"/>
-                            </buttonCell>
-                            <connections>
-                                <action selector="transformToolButtonAction:" target="-2" id="Vrv-BG-hVy"/>
-                            </connections>
-                        </button>
-                        <button toolTip="Translate Tool" tag="13" id="3" customClass="MacSVGIconButton">
-                            <rect key="frame" x="0.0" y="200" width="32" height="32"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                            <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="translate" imagePosition="only" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="10">
-                                <behavior key="behavior" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
-                                <font key="font" metaFont="system"/>
-                            </buttonCell>
-                            <connections>
-                                <action selector="transformToolButtonAction:" target="-2" id="aCZ-w9-zhd"/>
-                            </connections>
-                        </button>
-                        <button id="101">
-                            <rect key="frame" x="155" y="200" width="71" height="32"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                            <buttonCell key="cell" type="square" title="Delete" bezelStyle="shadowlessSquare" imagePosition="overlaps" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="102">
-                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                <font key="font" metaFont="system"/>
-                            </buttonCell>
-                            <connections>
-                                <action selector="transformToolDeleteButtonAction:" target="-2" id="ghM-b8-tCQ"/>
-                            </connections>
-                        </button>
-                        <scrollView horizontalLineScroll="16" horizontalPageScroll="10" verticalLineScroll="16" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" id="45">
-                            <rect key="frame" x="0.0" y="126" width="223" height="66"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <scrollView misplaced="YES" horizontalLineScroll="16" horizontalPageScroll="10" verticalLineScroll="16" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" id="45">
+                            <rect key="frame" x="0.0" y="104" width="226" height="80"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                             <clipView key="contentView" id="Usl-lv-WcU">
-                                <rect key="frame" x="1" y="1" width="206" height="64"/>
+                                <rect key="frame" x="1" y="1" width="209" height="78"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
                                     <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnReordering="NO" columnResizing="NO" multipleSelection="NO" autosaveColumns="NO" typeSelect="NO" rowHeight="14" id="46">
-                                        <rect key="frame" x="0.0" y="0.0" width="206" height="16"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="209" height="78"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <size key="intercellSpacing" width="3" height="2"/>
                                         <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                         <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                         <tableColumns>
-                                            <tableColumn editable="NO" width="203" minWidth="40" maxWidth="1000" id="50">
+                                            <tableColumn editable="NO" width="206" minWidth="40" maxWidth="1000" id="50">
                                                 <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left">
                                                     <font key="font" metaFont="smallSystem"/>
                                                     <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -132,22 +66,21 @@
                                         </connections>
                                     </tableView>
                                 </subviews>
-                                <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                             </clipView>
                             <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="47">
                                 <rect key="frame" x="-100" y="-100" width="223" height="15"/>
                                 <autoresizingMask key="autoresizingMask"/>
                             </scroller>
                             <scroller key="verticalScroller" verticalHuggingPriority="750" horizontal="NO" id="49">
-                                <rect key="frame" x="207" y="1" width="15" height="64"/>
+                                <rect key="frame" x="210" y="1" width="15" height="78"/>
                                 <autoresizingMask key="autoresizingMask"/>
                             </scroller>
                         </scrollView>
-                        <box autoresizesSubviews="NO" title="Values" borderType="line" titlePosition="noTitle" id="79">
-                            <rect key="frame" x="0.0" y="16" width="223" height="104"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                            <view key="contentView">
-                                <rect key="frame" x="1" y="1" width="221" height="102"/>
+                        <box autoresizesSubviews="NO" misplaced="YES" borderType="line" title="Values" titlePosition="noTitle" id="79">
+                            <rect key="frame" x="0.0" y="0.0" width="226" height="104"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                            <view key="contentView" id="OxB-Z9-8Mq">
+                                <rect key="frame" x="1" y="1" width="224" height="102"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
                                     <textField hidden="YES" verticalHuggingPriority="750" id="23">
@@ -215,13 +148,77 @@
                                     </textField>
                                 </subviews>
                             </view>
-                            <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
-                            <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         </box>
+                        <button toolTip="Scale Tool" misplaced="YES" tag="14" id="4" customClass="MacSVGIconButton">
+                            <rect key="frame" x="31" y="184" width="32" height="32"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                            <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="scale" imagePosition="only" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="9">
+                                <behavior key="behavior" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
+                                <font key="font" metaFont="system"/>
+                            </buttonCell>
+                            <connections>
+                                <action selector="transformToolButtonAction:" target="-2" id="pod-mv-VUi"/>
+                            </connections>
+                        </button>
+                        <button toolTip="Rotate Tool" misplaced="YES" tag="15" id="5" customClass="MacSVGIconButton">
+                            <rect key="frame" x="62" y="184" width="32" height="32"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                            <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="rotate" imagePosition="only" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="8">
+                                <behavior key="behavior" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
+                                <font key="font" metaFont="system"/>
+                            </buttonCell>
+                            <connections>
+                                <action selector="transformToolButtonAction:" target="-2" id="5XP-DA-nbX"/>
+                            </connections>
+                        </button>
+                        <button toolTip="SkewX Tool" misplaced="YES" tag="16" id="6" customClass="MacSVGIconButton">
+                            <rect key="frame" x="93" y="184" width="32" height="32"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                            <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="skewX" imagePosition="only" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="7">
+                                <behavior key="behavior" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
+                                <font key="font" metaFont="system"/>
+                            </buttonCell>
+                            <connections>
+                                <action selector="transformToolButtonAction:" target="-2" id="9Mv-HB-IhN"/>
+                            </connections>
+                        </button>
+                        <button toolTip="SkewY Tool" misplaced="YES" tag="17" id="76" customClass="MacSVGIconButton">
+                            <rect key="frame" x="124" y="184" width="32" height="32"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                            <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="skewY" imagePosition="only" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="77">
+                                <behavior key="behavior" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
+                                <font key="font" metaFont="system"/>
+                            </buttonCell>
+                            <connections>
+                                <action selector="transformToolButtonAction:" target="-2" id="Vrv-BG-hVy"/>
+                            </connections>
+                        </button>
+                        <button toolTip="Translate Tool" misplaced="YES" tag="13" id="3" customClass="MacSVGIconButton">
+                            <rect key="frame" x="0.0" y="184" width="32" height="32"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                            <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="translate" imagePosition="only" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="10">
+                                <behavior key="behavior" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
+                                <font key="font" metaFont="system"/>
+                            </buttonCell>
+                            <connections>
+                                <action selector="transformToolButtonAction:" target="-2" id="aCZ-w9-zhd"/>
+                            </connections>
+                        </button>
+                        <button misplaced="YES" id="101">
+                            <rect key="frame" x="155" y="184" width="71" height="32"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                            <buttonCell key="cell" type="square" title="Delete" bezelStyle="shadowlessSquare" imagePosition="overlaps" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="102">
+                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                <font key="font" metaFont="system"/>
+                            </buttonCell>
+                            <connections>
+                                <action selector="transformToolDeleteButtonAction:" target="-2" id="ghM-b8-tCQ"/>
+                            </connections>
+                        </button>
                     </subviews>
                 </customView>
             </subviews>
-            <point key="canvasLocation" x="280.5" y="420"/>
+            <point key="canvasLocation" x="53" y="207"/>
         </customView>
     </objects>
     <resources>
